--- a/index.html
+++ b/index.html
@@ -167,7 +167,12 @@ rabbit.style.position = 'absolute';
 rabbit.style.right = '1px';
 rabbit.style.bottom = '5px';
 document.body.appendChild(rabbit);
+
+rabbit.style.transform = 'scaleX(-1)';
 });
         </script>
     </head>
     <body style="margin: 0;">
+
+    </body>
+</html>
